Update text files 3.5.3

--- a/README.mkd
+++ b/README.mkd
@@ -1,4 +1,4 @@
-Release Notes - SABnzbd 3.5.3 Release Candidate 1
+Release Notes - SABnzbd 3.5.3
 =========================================================
 
 ## Bugfix since 3.5.0
