--- a/README.mkd
+++ b/README.mkd
@@ -1,38 +1,32 @@
-Release Notes - SABnzbd 3.5.0 Release Candidate 1
+Release Notes - SABnzbd 3.6.0 Beta 1
 =========================================================
 
-## Changes since 3.4.2
-- Removed Python 3.6 support.
-- SOCKS5 proxy support for all outgoing connections.
-- Restored support for UUencoded jobs.
-- `Required` server option: in case of connection failures, the queue
-  will be paused for a few minutes instead of skipping the server.
-- Added Special option to preserve paused state after a restart.
-- Show an estimated time-left indicator for repair and unpacking. 
-- Require TLS version 1.2 or higher for SSL news server connections.
-- Setting custom ciphers forces the maximum TLS version to 1.2.
-- Print low-level Windows status error on `IOError`.
-- Reduced memory usage during and after parsing `.nzb` files.
-- Handle multiple passwords stored in NZB-file.
-- macOS/Linux: `Permissions` are only applied if any are set.
-- macOS/Windows: updated to Python 3.10.2.
-- macOS: run native on M1 systems. However, included tools 
-  (`par2`, `unrar` and `7za`) still require Rosetta emulation.
-- Snap: updated to `core20` base and restore 7zip support.
+## Changes since 3.5.3
+- Significantly increased performance by using the yEnc-decoding
+  library of @animetosho. Usenet articles are now decoded using
+  specialized CPU instructions (SIMD) on x86 and ARM systems.
+- Create and restore backup of configuration and database.
+- Show source of lower download speed (CPU or disk).
+- Added keyboard shortcuts (Pause, Add, Status, Config).
+- Results of `Deobfuscate` step listed in History.
+- Disable `api_warnings` to prevent showing `Access Denied`
+  information to the external client.
+- Jobs with `Force` priority always skip duplicate check.
+- Removed several status items from the `queue` API-call.
+- Linux: Added AppStream metadata, desktop shortcut and MimeInfo.
+- macOS: Application and included tools fully native on M1 systems.
+- macOS/Windows: Updated UnRar to 6.10 and 7-Zip to 21.07.
+- Windows: Updated MultiPar to v1.3.2.3.
 
-## Bugfixes since 3.4.2
-- Email notification setting was not shown correctly.
-- Improvements and fixes for `Defobfuscate final filenames`.
-- `Post-Process Only Verified Jobs` would not always work as intended.
-- Correctly detect too little disk space when unpacking 7zip's.
-- Improvements to handling of repair by MultiPar and par2cmdline.
-- On Retry the number of downloaded bytes could exceed the total bytes.
-- `unrar` logging of Direct Unpack was not logged if it was aborted.
-- Windows: `portable.cmd` was not included in the release.
+# Bugfixes since 3.5.3
+- Extended timeout when measuring system performance.
+- Interface settings were sometimes reset on page reload.
+- Par2 sets with duplicate names could skip verification and repair.
+- Prevent crash if not enough repair blocks are available.
 
 ## Upgrade notices
-- The download statistics file `totals10.sab` is updated in 3.2.x 
-  version. If you downgrade to 3.1.x or lower, detailed download 
+- The download statistics file `totals10.sab` is updated in 3.2.x
+  version. If you downgrade to 3.1.x or lower, detailed download
   statistics will be lost.
 
 ## Known problems and solutions
