--- a/README.mkd
+++ b/README.mkd
@@ -1,4 +1,4 @@
-Release Notes - SABnzbd 3.7.0 Alpha 1
+Release Notes - SABnzbd 3.7.0 Beta 1
 =========================================================
 
 ## Changes since 3.6.1
@@ -7,16 +7,19 @@ Release Notes - SABnzbd 3.7.0 Alpha 1
 - Use shortcut `shift + arrow-key` to navigate the queue/history pages.
 - The backup is now created in a local folder for security.
 - Recurring backups can be configured using the scheduler.
-- Improvements to Deobfuscate File Filenames.
+- Improvements to Deobfuscate Final Filenames.
 - RSS overview shows the rule that accepted the job.
 - Added option to sort the queue by `% downloaded`.
 - Added option to replace underscores with dots in folder names.
 - SABnzbd Host input will be validated before being applied.
 - Moved system load information from the main page to the Status window.
+- Console logging is now written to `stdout` instead of `stderr`.
 - Removed Special settings `enable_meta`, `disable_key`,
   `replace_illegal`, `osx_speed` and `show_sysload`.
 - Merged Special settings `win_menu` and `osx_menu` into `tray_icon`.
-- macOS/Windows: Use Python 3.11rc2, boosting general performance.
+- macOS/Windows: Use Python 3.11rc2, boosting overall performance.
+- macOS/Windows: Updated UnRar to 6.12.
+- Windows: Updated MultiPar to 1.3.2.5.
 
 # API changes since 3.6.1
 - Minor improvements in API call performance.
@@ -28,7 +31,8 @@ Release Notes - SABnzbd 3.7.0 Alpha 1
 - File uploads with special characters would be parsed incorrectly.
 - Passwords from NZB meta-data were tried multiple times.
 - Passwords were not always supplied to the pre-queue script.
-- Make sure also short-dates are detected as `YY-MM-DD` in Sorting.
+- RSS-feed names were not sanitized when renamed.
+- Make sure short-dates are detected as `YY-MM-DD` in Sorting.
 - Show the custom job name in History when the NZB could not be fetched.
 
 ## Upgrade notices
