--- a/README.mkd
+++ b/README.mkd
@@ -1,4 +1,4 @@
-Release Notes - SABnzbd 3.7.0 Beta 1
+Release Notes - SABnzbd 3.7.0 Release Candidate 1
 =========================================================
 
 ## Changes since 3.6.1
@@ -22,7 +22,7 @@ Release Notes - SABnzbd 3.7.0 Beta 1
 - Windows: Updated MultiPar to 1.3.2.5.
 
 # API changes since 3.6.1
-- Minor improvements in API call performance.
+- Minor improvements in API performance.
 - Removed fields `scripts` and `categories` from `queue` API call.
 - Moved `loadavg` from `queue` to `status` API call.
 
